# EDA_Q4

./: .gitignore  CMakeLists.txt  Makefile
includes/: Cell.hpp  CellManager.hpp  ConfigManager.hpp  ConstraintManager.hpp  Debug.h  Flow.hpp  Point.hpp  Rectangle.hpp  Regex.hpp  Typedef.h  VCG.hpp
legalization/: CellMovement.cpp  CellMovement.h  LegalizationCheck.cpp  LegalizationCheck.h
resources/test0/: configure0.xml  constraint0.xml
resources/test1/: configure1.xml  constraint1.xml
resources/test2/: configure.xml  constraint.xml
resources/test3/: configure.xml  constraint.xml
src/: Campare.cpp  CellManager.cpp  ConfigManager.cpp  ConstraintManager.cpp  Flow.cpp  Regex.cpp  VCG.cpp  global.cpp  main.cpp
